--- a/philanthropy.html
+++ b/philanthropy.html
@@ -1,120 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <title>Philanthropy</title>
+<head>
+  <title>Philanthropy</title>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <!-- Custom styles for this template -->
+  <!-- <link href="css/modern-business.css" rel="stylesheet"> -->
+  <link href="tridelta.css" rel="stylesheet">
 
-  
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <!-- Custom styles for this template -->
-     <!-- <link href="css/modern-business.css" rel="stylesheet"> -->
-    <link href="tridelta.css" rel="stylesheet">
+  <!-- Social Media Icons-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+  <script defer src="/vendor/bootstrap/js/fontawesome-all.js"></script>
 
-     <!-- Social Media Icons-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-    <script defer src="/vendor/bootstrap/js/fontawesome-all.js"></script>
+</head>
 
+<body>
 
-  </head>
-
-  <body>
-
-    <!-- Navigation -->
-      <div id="menu" class="navbar navbar-default navbar-custom">
+  <!-- Navigation -->
+  <div id="menu" class="navbar navbar-default navbar-custom">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color:#FEA17E">
-        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-            <ul class="navbar-nav mr-auto" >
-                <li class="nav-item">
-                    <a class="nav-link" href="aboutus.html">About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="recruitment.html">Recruitment</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="events.html">Events</a>
-                </li>
-            </ul>
-        </div>
+      <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+        <ul class="navbar-nav mr-auto" >
+          <li class="nav-item">
+            <a class="nav-link" href="aboutus.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="recruitment.html">Recruitment</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="events.html">Events</a>
+          </li>
+        </ul>
+      </div>
 
-        <div class="mx-auto order-0">
-            <a class="navbar-brand mx-auto" href="index.html">
-              <img src = "images/logo.png" class = "logo-margin w3-hover-opacity" width="100" alt="logo thing">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
+      <div class="mx-auto order-0">
+        <a class="navbar-brand mx-auto" href="index.html">
+          <img src = "images/logo.png" class = "logo-margin w3-hover-opacity" width="100" alt="logo thing">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
 
-        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="leadership.html">Leadership</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="sisterhood.html">Sisterhood</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="philanthropy.html">Philanthropy</a>
-                </li>
-            </ul>
-        </div>
+      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="leadership.html">Leadership</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sisterhood.html">Sisterhood</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="philanthropy.html">Philanthropy</a>
+          </li>
+        </ul>
+      </div>
     </nav>
   </div>
 
-    <!-- Page Content -->
+  <!-- Page Content -->
   <div class="banner">
-      <img class="banner-image" src="./images/events/spiritnight.jpg">
+    <img class="banner-image" src="./images/events/spiritnight.jpg">
     <div class="banner-text">
       <p>Philanthropy</p>
     </div>
   </div>
-    <!-- Page Content -->
-    <div class="container">
 
-      <!-- Page Heading/Breadcrumbs -->
+  <!-- Page Content -->
 
+  <div class="container">
+    <!-- Page Heading/Breadcrumbs -->
 
-      <div class="philanthropy-section" style="margin-top:7.5%;margin-bottom:7.5%">
-        <div class="row">
-
+    <div class="philanthropy-section" style="margin-top:7.5%;margin-bottom:7.5%">
+      <div class="row">
         <!-- Post Content Column -->
-          <div class="col-lg-6">
-
+        <div class="col-lg-6">
           <!-- Preview Image -->
-              <img class="img-fluid rounded" src="http://placehold.it/900x600" alt="">
-              <div class ="recruitment-chair">
-              Contact Info
-              </div>
+          <img class="img-fluid rounded" src="http://placehold.it/900x600" alt="">
+          <div class ="recruitment-chair">
+            Contact Info
+          </div>
           <div class = "recruitment-dlm">
             email @ ucsd.edu
             <br>
             (xxx) - xxx xxxx
           </div>
         </div>
-         <div class="col-lg-6">
+        <div class="col-lg-6">
           <div class="philanthropy-dlm">
             A letter from our
           </div>
           <div class ="philanthropy-chair">
             Philanthropy Chair
-            </div>
-            <br>
+          </div>
+          <br>
           <div class = "philanthropy-body">
             Welcome to Tri Delta at UCSD! I would like to invite you to take a look around and see exactly what makes this chapter such an incredible home for my sisters and me. The Gamma Lambda chapter here at UCSD is full of talented, brilliant women with resounding dedication to each other and an outstanding drive to succeed. 
-We are brave, bold, and kind to each other, our Panhellenic sisters, and the UCSD community. We are passionate about service and striving to be the best versions of ourselves. And we are dedicated to helping women live, learn, and lead.
-I hope my sisters and I can provide an authentic opportunity for you to Bring You, your hopes, aspirations, failures, and successes. As the Philanthropy Chair of the Tri Delta chapter at UCSD I can say with the utmost certainty that I’ve never encountered such an incredibly funny, witty, and compassionate group of young women. They truly embody our values of truth, self sacrifice, and friendship. Welcome to our chapter and I hope you experience the love and kindness of women I am honored to call sisters. 
+            We are brave, bold, and kind to each other, our Panhellenic sisters, and the UCSD community. We are passionate about service and striving to be the best versions of ourselves. And we are dedicated to helping women live, learn, and lead.
+            I hope my sisters and I can provide an authentic opportunity for you to Bring You, your hopes, aspirations, failures, and successes. As the Philanthropy Chair of the Tri Delta chapter at UCSD I can say with the utmost certainty that I’ve never encountered such an incredibly funny, witty, and compassionate group of young women. They truly embody our values of truth, self sacrifice, and friendship. Welcome to our chapter and I hope you experience the love and kindness of women I am honored to call sisters. 
           </div>
           <div class="philanthropy-dlm">
             Delta Love and Mine, 
@@ -126,121 +121,116 @@ I hope my sisters and I can provide an authentic opportunity for you to Bring Yo
             Philanthropy Chair  
           </div>
         </div>
-      <!-- /.row -->
-    </div>
-
+      </div> <!-- ROW ENDS -->
 
       <div>
-          <h1 class="mt-4 mb-3" style="text-align:center;background:#FEA17E"> St. Jude Children's Research Hospital
-          </h1>
-            <div class="row">
-              <div class="col-lg-6">
-                 <img class="img-fluid rounded" src="http://placehold.it/900x900" alt="">
-                </div>
-              <div class="col-lg-6">
-                <div class = "philanthropy-body">
-                 Since the 1970s, Tri Delta members have supported children's cancer charities. This philanthropic cause encompasses a wide array of charitable organizations and represents the collective effort of Tri Delta members and chapters across North America who continue to donate goods, volunteer time and host fundraisers for the research and treatment of children with cancer.  
-
-
-                </div>
-
-                </div>
+        <h1 class="mt-4 mb-3" style="text-align:center;background:#FEA17E"> St. Jude Children's Research Hospital
+        </h1>
+        <div class="row">
+          <div class="col-lg-6">
+            <div class = "philanthropy-body">
+             Since the 1970s, Tri Delta members have supported children's cancer charities. This philanthropic cause encompasses a wide array of charitable organizations and represents the collective effort of Tri Delta members and chapters across North America who continue to donate goods, volunteer time and host fundraisers for the research and treatment of children with cancer.  
             </div>
+           </div>
+          <div class="col-lg-6">
+           <img class="img-fluid rounded" src="http://placehold.it/500x500" alt="">
           </div>
-          <div>
-          <h1 class="mt-4 mb-3" style="text-align:center;background:#FEA17E"> Delta Idol
-          </h1>
-               <div class="row">
-                <div class="col-lg-6">
-                 <img class="img-fluid rounded" src="http://placehold.it/900x900" alt="">
-                  </div>
-                 <div class="col-lg-6">
-                <div class = "philanthropy-body">
-                  This is will be a paragraph about Delta Idol. It will talk about what it is, what the fundraising is for, and who it will benefit.
-                </div>
-                </div>
-            </div>
-                      <h1 class="mt-4 mb-3" style="text-align:center;background:#FEA17E"> External Philanthropy
-          </h1>
-            <div class = "philanthropy-section-ext">
-              <div class="row">
-                  <div class="col-lg-6">
-                      <img class="img-fluid rounded" src="http://placehold.it/900x900" alt="">
-                  </div>
-                  <div class="col-lg-6">
-                    <div class = "philanthropy-body">
-                    This will be a paragraph about external philanthropy. It will provide information regarding philanthropic activites held by other organizations of Greek life, such as by fraternities and other sororities.
-                    </div>
-                  </div>
-              </div>
-            </div>
+        </div>
       </div>
-    <!-- /.container -->
-  </div>
-  </body>
 
-<!--FOOTER START -->   
-  <footer class="py-3" style="background-color:#FEA17E">
-    <div class="container">
+   <div>
+    <h1 class="mt-4 mb-3" style="text-align:center;background:#FEA17E"> Delta Idol
+    </h1>
+    <div class="row">
+      <div class="col-lg-6">
+       <img class="img-fluid rounded" src="http://placehold.it/500x500" alt="">
+      </div>
+     <div class="col-lg-6">
+      <div class = "philanthropy-body">
+        This is will be a paragraph about Delta Idol. It will talk about what it is, what the fundraising is for, and who it will benefit.
+      </div>
+     </div>
+    </div>
+
+    <h1 class="mt-4 mb-3" style="text-align:center;background:#FEA17E"> External Philanthropy
+    </h1>
+    <div class = "philanthropy-section-ext">
       <div class="row">
-        
-        <div class="col-sm-4">
-          <div class="footer-text1">
-            Delta Delta Delta 
-            <br> 
-            <div class="gamma-lambda">
-              Gamma Lambda 
-            </div>
-            University of California,
-            <br>
-            San Diego
+          <div class="col-lg-6">
+          <div class = "philanthropy-body">
+            This will be a paragraph about external philanthropy. It will provide information regarding philanthropic activites held by other organizations of Greek life, such as by fraternities and other sororities.
           </div>
         </div>
-
-        <div class="col-sm-4 login">
-          <div class="footer-text">
-            GINsystem Log In
-          </div>
-          <div class="ginsystem-login">
-            <form action="https://app.ginsystem.us/login" method="post" target="blank">
-              <input type="hidden" name="parent_group" value="ddd">
-              <input type="text" name="username" class="username form-control" placeholder="Delta Delta Delta Username" required>
-              <input type="password" name="password" class="password form-control" placeholder="Delta Delta Delta Password" required>
-              <button type="submit" class="btn btn-default gin-login">Log In</button>
-            </form>
-          </div>
+        <div class="col-lg-6">
+          <img class="img-fluid rounded" src="http://placehold.it/200x200" alt="">
         </div>
-           
-         <!-- Social Media Icons-->
-        <div class="col-sm-4">
-          <div class="footer-text2">Follow UCSD Tri Delta</div>
-          <div class="social-media">
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-pinterest-p"></i>
-            <i class="fab fa-tumblr"></i>
-            <i class="fab fa-twitter"></i>
+      </div>
+    </div>
+    </div>
+  </div>
+</div> <!--  CONTAINER -->
+</body>
+<!--FOOTER START -->   
+<footer class="py-3" style="background-color:#FEA17E">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="footer-text1">
+          Delta Delta Delta 
+          <br> 
+          <div class="gamma-lambda">
+            Gamma Lambda 
           </div>
-          <div class="contact-us">
-            Contact Us!
-          </div>
-          <div class="vppr-email">
-            ucsd.ddd.vppr@gmail.com
-          </div>
-        </div><!--col-sm-4-->
-      </div> <!--row-->
-
-      <div class="copy-right"><!--row-->
-        &copy; Copyright Group Interactive Networks (GIN) | Delta Delta Delta
+          University of California,
+          <br>
+          San Diego
+        </div>
       </div>
 
-    </div> <!--container-->
-  </footer>
-  <!-- FOOTER END -->
+      <div class="col-sm-4 login">
+        <div class="footer-text">
+          GINsystem Log In
+        </div>
+        <div class="ginsystem-login">
+          <form action="https://app.ginsystem.us/login" method="post" target="blank">
+            <input type="hidden" name="parent_group" value="ddd">
+            <input type="text" name="username" class="username form-control" placeholder="Delta Delta Delta Username" required>
+            <input type="password" name="password" class="password form-control" placeholder="Delta Delta Delta Password" required>
+            <button type="submit" class="btn btn-default gin-login">Log In</button>
+          </form>
+        </div>
+      </div>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <!-- Social Media Icons-->
+      <div class="col-sm-4">
+        <div class="footer-text2">Follow UCSD Tri Delta</div>
+        <div class="social-media">
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-pinterest-p"></i>
+          <i class="fab fa-tumblr"></i>
+          <i class="fab fa-twitter"></i>
+        </div>
+        <div class="contact-us">
+          Contact Us!
+        </div>
+        <div class="vppr-email">
+          ucsd.ddd.vppr@gmail.com
+        </div>
+      </div><!--col-sm-4-->
+    </div> <!--row-->
+
+    <div class="copy-right"><!--row-->
+      &copy; Copyright Group Interactive Networks (GIN) | Delta Delta Delta
+    </div>
+
+  </div> <!--container-->
+</footer>
+<!-- FOOTER END -->
+
+<!-- Bootstrap core JavaScript -->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 
 
