--- a/philanthropy.html
+++ b/philanthropy.html
@@ -25,6 +25,11 @@
   <script defer src="/vendor/bootstrap/js/fontawesome-all.js"></script>
 
 </head>
+<style>
+ .carousel-inner img {
+    width: 100%;
+    height: 100%;
+</style>
 
 <body>
 
@@ -83,12 +88,13 @@
   <div class="container">
     <!-- Page Heading/Breadcrumbs -->
 
+
     <div class="philanthropy-section" style="margin-top:7.5%;margin-bottom:7.5%">
-      <div class="row">
+      <div class="row" style="margin-bottom:2em">
         <!-- Post Content Column -->
-        <div class="col-lg-6">
+        <div class="col-lg-4">
           <!-- Preview Image -->
-          <img class="img-fluid rounded" src="http://placehold.it/900x600" alt="">
+        <img class="img-fluid rounded" src="./images/recruitment/delilah.jpg" alt="">
           <div class ="recruitment-chair">
             Contact Info
           </div>
@@ -98,7 +104,7 @@
             (xxx) - xxx xxxx
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-8">
           <div class="philanthropy-dlm">
             A letter from our
           </div>
@@ -124,45 +130,110 @@
       </div> <!-- ROW ENDS -->
 
       <div>
-        <h1 class="mt-4 mb-3" style="text-align:center;background:#FEA17E"> St. Jude Children's Research Hospital
-        </h1>
         <div class="row">
-          <div class="col-lg-6">
-            <div class = "philanthropy-body">
+          <div class="col-lg-8">
+              <div class = "sister-title">
+                St. Jude Children's Research Hospital
+              </div>
+              <div class = "sister-body">
              Since the 1970s, Tri Delta members have supported children's cancer charities. This philanthropic cause encompasses a wide array of charitable organizations and represents the collective effort of Tri Delta members and chapters across North America who continue to donate goods, volunteer time and host fundraisers for the research and treatment of children with cancer.  
-            </div>
+              </div>
+            
            </div>
-          <div class="col-lg-6">
-           <img class="img-fluid rounded" src="http://placehold.it/500x500" alt="">
+          <div class="col-lg-4">
+           <div id="demo" class="carousel slide w3-mobile" data-ride="carousel">
+          <!-- The slideshow -->
+          <div class="carousel-inner polaroid">
+            <div class="carousel-item active">
+              <p>Winter '16</p>
+              <img src="./images/sisterhood/reveal1.jpg" alt="Los Angeles" width="1100" height="500">
+            </div>
+            <div class="carousel-item">
+              <p>Winter '16</p>
+              <img src="./images/sisterhood/reveal2.jpeg" alt="Chicago" width="1100" height="500">
+            </div>
+            <div class="carousel-item">
+              <p>Winter '16</p>
+              <img src="./images/sisterhood/reveal3.jpg" alt="New York" width="1100" height="500">
+            </div>
+            <div class="carousel-item">
+              <p>Winter '16</p>
+              <img src="./images/sisterhood/reveal4.jpeg" alt="New York" width="1100" height="500">
+            </div>
+          </div>
+        </div>
           </div>
         </div>
       </div>
 
    <div>
-    <h1 class="mt-4 mb-3" style="text-align:center;background:#FEA17E"> Delta Idol
-    </h1>
     <div class="row">
-      <div class="col-lg-6">
-       <img class="img-fluid rounded" src="http://placehold.it/500x500" alt="">
+      <div class="col-lg-4">
+       <div id="demo" class="carousel slide w3-mobile" data-ride="carousel">
+          <!-- The slideshow -->
+          <div class="carousel-inner polaroid">
+            <div class="carousel-item active">
+              <p>Winter '16</p>
+              <img src="./images/sisterhood/reveal1.jpg" alt="Los Angeles" width="1100" height="500">
+            </div>
+            <div class="carousel-item">
+              <p>Winter '16</p>
+              <img src="./images/sisterhood/reveal2.jpeg" alt="Chicago" width="1100" height="500">
+            </div>
+            <div class="carousel-item">
+              <p>Winter '16</p>
+              <img src="./images/sisterhood/reveal3.jpg" alt="New York" width="1100" height="500">
+            </div>
+            <div class="carousel-item">
+              <p>Winter '16</p>
+              <img src="./images/sisterhood/reveal4.jpeg" alt="New York" width="1100" height="500">
+            </div>
+          </div>
+        </div>
       </div>
-     <div class="col-lg-6">
-      <div class = "philanthropy-body">
+     <div class="col-lg-8">
+      <div class = "sister-title"> 
+        Delta Idol
+      </div>
+      <div class = "sister-body">
         This is will be a paragraph about Delta Idol. It will talk about what it is, what the fundraising is for, and who it will benefit.
       </div>
      </div>
     </div>
 
-    <h1 class="mt-4 mb-3" style="text-align:center;background:#FEA17E"> External Philanthropy
-    </h1>
+
     <div class = "philanthropy-section-ext">
       <div class="row">
-          <div class="col-lg-6">
-          <div class = "philanthropy-body">
-            This will be a paragraph about external philanthropy. It will provide information regarding philanthropic activites held by other organizations of Greek life, such as by fraternities and other sororities.
+          <div class="col-lg-8">
+            <div class = "sister-title">
+              External Philanthropy
+            </div>
+            <div class = "sister-body">
+              This will be a paragraph about external philanthropy. It will provide information regarding philanthropic activites held by other organizations of Greek life, such as by fraternities and other sororities.
+            </div>
+          </div>
+        <div class="col-lg-4">
+          <div id="demo" class="carousel slide w3-mobile" data-ride="carousel">
+          <!-- The slideshow -->
+          <div class="carousel-inner polaroid">
+            <div class="carousel-item active">
+              <p>Winter '16</p>
+              <img src="./images/sisterhood/reveal1.jpg" alt="Los Angeles" width="1100" height="500">
+            </div>
+            <div class="carousel-item">
+              <p>Winter '16</p>
+              <img src="./images/sisterhood/reveal2.jpeg" alt="Chicago" width="1100" height="500">
+            </div>
+            <div class="carousel-item">
+              <p>Winter '16</p>
+              <img src="./images/sisterhood/reveal3.jpg" alt="New York" width="1100" height="500">
+            </div>
+            <div class="carousel-item">
+              <p>Winter '16</p>
+              <img src="./images/sisterhood/reveal4.jpeg" alt="New York" width="1100" height="500">
+            </div>
           </div>
         </div>
-        <div class="col-lg-6">
-          <img class="img-fluid rounded" src="http://placehold.it/200x200" alt="">
         </div>
       </div>
     </div>
@@ -170,6 +241,7 @@
   </div>
 </div> <!--  CONTAINER -->
 </body>
+
 <!--FOOTER START -->   
 <footer class="py-3" style="background-color:#FEA17E">
   <div class="container">
@@ -231,7 +303,7 @@
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+<!-- -->
 
 
 </html>
