--- a/recruitment.html
+++ b/recruitment.html
@@ -86,7 +86,7 @@
   <div class="recruitment-section">
     <div class="row">
       <!-- Post Content Column -->
-      <div class="col-lg-6">
+      <div class="col-lg-4">
         <!-- Preview Image -->
         <img class="img-fluid rounded" src="./images/recruitment/delilah.jpg" alt="">
         <div class ="recruitment-chair">
@@ -98,7 +98,7 @@
           (xxx) - xxx xxxx
         </div>
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-8">
         <div class ="recruitment-dlm">
           A letter from our
         </div>
@@ -127,29 +127,32 @@
   <!-- PUT CLOSING DIV HERE FOR CONTAINER-->
 
   <div>
-    <h1 class="mt-4 mb-3" style="text-align:center;background:#FEA17E"> Formal Recruitment
-    </h1>
+
+    <div class="sister-title" style="text-align:center;">
+      Formal Recruitment
+    </div>
     <div class="row">
       <div class="col-lg-3">
       </div>
-      <div class = "col-lg-6">
-        <p class = "recruitment-body" style="text-align:left;">
+      <div class = "col-lg-P6">
+        <div class = "sister-body" style="text-align:left;">
          This is where information regarding the recruitment process will go. It have provide information about recruitment events, event times, event locations, and the general time-line of the recruitment process.
-        </p>
+        </div>
       </div>
      <div class ="col-lg-3">
      </div>
    </div>
 
-   <h1 class="mt-4 mb-3" style="text-align:center;background:#FEA17E"> Current Open Bidding
-   </h1>
+<div class = "sister-title" style="text-align:center;">
+  Current Open Bidding
+</div>
    <div class="row">
     <div class = "col-lg-3">
     </div>
     <div class="col-lg-6">
-      <p class= "recruitment-body" style="text-align:left;">
+      <div class= "sister-body" style="text-align:left;">
         This is also known as Informal Recruitment. Although most sororities finish the recruitment process after Fall Quarter, TriDelta continues to recruit in Winter or Spring. This section will provide information on how to continue the recruitment process during Winter or Spring for the prospective members.
-      </p>
+      <div>
     </div>
   </div>
 </div>
