Fixed navbar centered and added slick

--- a/events.html
+++ b/events.html
@@ -13,11 +13,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-  <!-- Custom styles for this template -->
-  <link href="tridelta.css" rel="stylesheet">
-
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet" type='text/css'>
+
+  <!-- Custom styles for this template -->
+  <link href="events.css" rel="stylesheet">
 
   <!-- Social Media Icons-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
