--- a/sisterhood.html
+++ b/sisterhood.html
@@ -12,11 +12,12 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <!-- <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'> -->
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <link href="https://fonts.googleapis.com/css?family=Handlee|Euphoria+Script" rel="stylesheet" type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="tridelta.css" rel="stylesheet">
+  <link href="sisterhood.css" rel="stylesheet">
 
 
   <!-- Social Media Icons-->
@@ -59,11 +60,12 @@
         <a class="navbar-brand mx-auto" href="index.html">
           <img src = "images/logo.png" class = "logo-margin w3-hover-opacity" width="100" alt="logo thing">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+        <button id="hamburger" class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
           <span class="navbar-toggler-icon"></span>
         </button>
       </div>
 
+        
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -91,12 +93,15 @@
   </div>
 
   <!-- Page Content -->
+
+
   <div class="sisterhood-page">
     <div class="container">
 
       <div class="sister-summary">
         Having a sisterhood as tight-knit as ours not only serves as an amazing support system, but also creates memories that will last a lifetime. Our annual sisterhood events include sisterhood retreats, Big/Little reveal, weekly sisterhood events, and much more! We have various 'Deltas Only' events throughout the year to strengthen our sisterhood and explore San Diego! Some events going to a Padres game, photoshoots at pumpkin patches, haunted hayrides, and beach bonfires.
       </div>
+
 
     </br>
     <div class="container sister-details">
@@ -251,18 +256,29 @@
       <div class="col-sm-4">
         <div class="footer-text2">Follow UCSD Tri Delta</div>
         <div class="social-media">
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-facebook-f"></i>
-          <i class="fab fa-pinterest-p"></i>
-          <i class="fab fa-tumblr"></i>
-          <i class="fab fa-twitter"></i>
+          <a href="https://www.instagram.com/trideltaucsd/">
+            <i class="fab ho fa-instagram"></i>
+          </a>
+          <a href="https://www.facebook.com/ucsdtridelta/">
+            <i class="fab ho fa-facebook-f"></i>
+          </a>
+          <i class="fab ho fa-pinterest-p"></i>
+          <a href="http://ucsdtridelta.tumblr.com/">
+            <i class="fab ho fa-tumblr"></i>
+          </a>
+          <a href="https://twitter.com/dddatucsd">
+            <i class="fab ho fa-twitter"></i>
+          </a>
         </div>
+
         <div class="contact-us">
           Contact Us!
         </div>
+
         <div class="vppr-email">
           ucsd.ddd.vppr@gmail.com
         </div>
+
       </div><!--col-sm-4-->
     </div> <!--row-->
 
@@ -277,6 +293,9 @@
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js">
+</script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
 
 </body>
 
