--- a/aboutus.html
+++ b/aboutus.html
@@ -15,6 +15,9 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+  <!-- Slick -->
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 
   <!-- Custom styles for this template -->
   <link href="tridelta.css" rel="stylesheet">
@@ -154,41 +157,29 @@
   <div class="w3-content w3-display-container">
 
     <div class="mySlides">
-      <img src="images/pansy.png" class = "w3-center" style="width:20%; text-align:center">
       <div class="w3-center">
-      The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
-    </div>
-    </div>
-
-    <div class="mySlides">
-      <img src="images/logo.png" class = "w3-center" style="width:30%; text-align:center">
-      <div class="w3-center">
-      The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
-    </div>
-    </div>
-        <div class="mySlides">
-      <div class = "w3-center">
-        pansy
+        <img src="images/pansy.png" class = "w3-center" style="width:20%; text-align:center">
+          The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
       </div>
-      <img src="images/pansy.png" class = "w3-center" style="width:20%">
       <div class="w3-center">
-      The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
-    </div>
-    </div>
-        <div class="mySlides">
-      <img src="images/logo.png" class = "w3-center" style="width:30%; text-align:center">
+        <img src="images/logo.png" class = "w3-center" style="width:30%; text-align:center">
+          The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
+      </div>
       <div class="w3-center">
-      The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
-    </div>
-    </div>
-        <div class="mySlides">
-      <img src="images/pansy.png" class = "w3-center" style="width:30%; text-align:center">
+        <img src="images/pansy.png" class = "w3-center" style="width:20%">
+        The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
+      </div>
       <div class="w3-center">
-      The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
-    </div>
+        <img src="images/logo.png" class = "w3-center" style="width:30%; text-align:center">
+        The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
+      </div>
+      <div class="w3-center">
+        <img src="images/pansy.png" class = "w3-center" style="width:30%; text-align:center">
+        The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
+      </div>
     </div>
 
-    <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+<!--    <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
     <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
   </div>
 
@@ -210,7 +201,7 @@ function showDivs(n) {
   }
   x[slideIndex-1].style.display = "block";  
 }
-</script>
+</script> -->
 
 
 </div>
@@ -257,7 +248,47 @@ function showDivs(n) {
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="slick/slick.min.js"></script>
 
+<script>
+$(document).ready(function(){
+  $('.mySlides').slick({
+    dots: true,
+    infinite: false,
+    speed: 300,
+    slidesToShow: 4,
+    slidesToScroll: 4,
+    responsive: [
+      {
+        breakpoint: 1024,
+        settings: {
+          slidesToShow: 3,
+          slidesToScroll: 3,
+          infinite: true,
+          dots: true
+        }
+      },
+      {
+        breakpoint: 600,
+        settings: {
+          slidesToShow: 2,
+          slidesToScroll: 2
+        }
+      },
+      {
+        breakpoint: 480,
+        settings: {
+          slidesToShow: 1,
+          slidesToScroll: 1
+        }
+      }
+      // You can unslick at a given breakpoint now by adding:
+      // settings: "unslick"
+      // instead of a settings object
+    ]
+  });
+});
+</script>
 </body>
 
 </html>
